enable functioning cart

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -62,7 +62,7 @@
                         <div class="widget-header">
                             <small class="title text-muted">Welcome guest!</small>
                             <div> 
-                                <a href="./admin/">Sign in</a> <span class="dark-transp"> | </span>
+                                <a href="/admin">Sign in</a> <span class="dark-transp"> | </span>
                                 <a href="./register.html"> Register</a>
                             </div>
                         </div>
