--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -85,7 +85,7 @@
 	{% endif %}
 </div> <!-- row end.// -->
 
-
+<!-- ========================= PAGING ========================= -->
 <nav class="mt-4" aria-label="Page navigation sample">
 	{% if products.has_other_pages %}
 	  <ul class="pagination">
@@ -111,6 +111,7 @@
 	  </ul>
 	{% endif %}
 </nav>
+<!-- ========================= END PAGING ========================= -->
 
 	</main> <!-- col.// -->
 
